--- a/index.html
+++ b/index.html
@@ -19,24 +19,25 @@
     <!-- Header -->
     <h2 class="text-secondary mb-4">Anagrammaker (Mark Aagerman)</h2>
 
+    <!-- Uitleg -->
+    <p class="text-secondary">Vul in het eerste veld je naam in, en begin in het tweede veld te experimenteren met anagrammen. Tussen de twee velden zie je de letters die over zijn.</p>
+
+    <!-- Naam -->
     <div class="form-floating">
       <input type="text" class="form-control" id="original" name="original" value="Cristovar Novem" onkeyup="go()">
       <label for="original">Naam</label>
     </div>
 
-    <!-- original -->
-
     <!-- Letters -->
     <p class="my-3 py-3 px-4 bg-light fs-2" id="letters"></p>
 
     <!-- Anagram -->
-
     <div class="form-floating">
       <input type="text" class="form-control" id="anagram" name="anagram" value="Tim van" onkeyup="go()">
       <label for="anagram">Anagram</label>
     </div>
 
-    <!-- Wrong -->
+    <!-- Foutmelding -->
     <p class="my-3" id="wrong"></p>
 
     <!-- Klad -->
