--- a/index.html
+++ b/index.html
@@ -1,51 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
   <head>
-    <title>Anagrams</title>
+    <title>Anagrammaker</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="anagrams.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@400..900&display=swap" rel="stylesheet">
-    <!-- CSS -->
-    <link rel="stylesheet" href="anagrams.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
 
   <body class="m-4" onload="go()">
     <!-- Header -->
-    <h2 class="text-secondary mb-4">Anagrammaker (Mark Aagerman)</h2>
-
-    <!-- Uitleg -->
-    <p class="text-secondary">Vul in het eerste veld je naam in, en begin in het tweede veld te experimenteren met anagrammen. Tussen de twee velden zie je de letters die over zijn.</p>
-
-    <!-- Naam -->
+    <h2 class="text-secondary">Anagrammaker</h2>
+    <!-- Explanation -->
+    <p class="text-secondary">Vul in het eerste veld je naam in, en begin in het tweede veld te experimenteren met anagrammen. Tussen de twee velden in zie je de letters die over zijn.</p>
+    <!-- Name -->
     <div class="form-floating">
-      <input type="text" class="form-control" id="original" name="original" value="Cristovar Novem" onkeyup="go()">
-      <label for="original">Naam</label>
+      <input type="text" class="form-control" id="anagramSource" name="anagramSource" value="Tim van Croovers" onkeyup="go()">
+      <label for="anagramSource">Naam</label>
     </div>
-
-    <!-- Letters -->
-    <p class="my-3 py-3 px-4 bg-light fs-2" id="letters"></p>
-
+    <!-- Leftover letters -->
+    <p class="my-3 py-3 px-4 bg-light fs-2" id="leftoverLetters"></p>
     <!-- Anagram -->
     <div class="form-floating">
-      <input type="text" class="form-control" id="anagram" name="anagram" value="Tim van" onkeyup="go()">
-      <label for="anagram">Anagram</label>
+      <input type="text" class="form-control" id="anagramAttempt" name="anagramAttempt" value="Cristovar" onkeyup="go()">
+      <label for="anagramAttempt">Anagram</label>
     </div>
-
-    <!-- Foutmelding -->
-    <p class="my-3" id="wrong"></p>
-
-    <!-- Klad -->
+    <!-- Error Message -->
+    <p class="my-3" id="errorMessage"></p>
+    <!-- Draft -->
     <div class="form-floating">
       <textarea class="form-control" id="klad" style="height:189px;"></textarea>
       <label for="klad">Klad</label>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="anagrams.js"></script>
   </body>
