--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p class="my-3 py-3 px-4 bg-light fs-2" id="leftoverLetters"></p>
     <!-- Anagram -->
     <div class="form-floating">
-      <input type="text" class="form-control" id="anagramAttempt" name="anagramAttempt" value="Cristovar" onkeyup="go()">
+      <input type="text" class="form-control" id="anagramAttempt" name="anagramAttempt" value="Cristovar Novem" onkeyup="go()">
       <label for="anagramAttempt">Anagram</label>
     </div>
     <!-- Error Message -->
