--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <p class="text-secondary">Vul in het eerste veld je naam in, en begin in het tweede veld te experimenteren met anagrammen. Tussen de twee velden in zie je de letters die over zijn.</p>
     <!-- Name -->
     <div class="form-floating">
-      <input type="text" class="form-control" id="anagramSource" name="anagramSource" value="Tim van Croovers" onkeyup="go()">
+      <input type="text" class="form-control" id="anagramSource" name="anagramSource" onkeyup="go()">
       <label for="anagramSource">Naam</label>
     </div>
     <!-- Leftover letters -->
     <p class="my-3 py-3 px-4 bg-light fs-2" id="leftoverLetters"></p>
     <!-- Anagram -->
     <div class="form-floating">
-      <input type="text" class="form-control" id="anagramAttempt" name="anagramAttempt" value="Cristovar Novem" onkeyup="go()">
+      <input type="text" class="form-control" id="anagramAttempt" name="anagramAttempt" onkeyup="go()">
       <label for="anagramAttempt">Anagram</label>
     </div>
     <!-- Error Message -->
