--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Anagrammaker</title>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="anagrams.css">
     <!-- Google Fonts -->
